[gd_scene load_steps=4 format=3 uid="uid://rflulhsuy3ax"]

[ext_resource type="Script" path="res://material_maker/widgets/float_edit/float_edit.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umggk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5q7m"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 3.0
content_margin_bottom = 2.0

[node name="FloatEdit" type="PanelContainer"]
clip_children = 1
offset_right = 158.0
offset_bottom = 23.0
size_flags_vertical = 4
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_umggk")
script = ExtResource("1")

[node name="Slider" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 2
theme_type_variation = &"MM_NodeFloatEdit"
show_percentage = false

[node name="Edit" type="LineEdit" parent="."]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MM_NodeFloatEdit"
theme_override_styles/focus = SubResource("StyleBoxEmpty_t5q7m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_t5q7m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_t5q7m")
text = "Value"
alignment = 2
context_menu_enabled = false

[connection signal="focus_entered" from="." to="." method="_on_FloatEdit_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LineEdit_focus_exited"]
[connection signal="resized" from="." to="." method="do_update"]
[connection signal="focus_exited" from="Edit" to="." method="_on_edit_focus_exited"]
[connection signal="gui_input" from="Edit" to="." method="_gui_input"]
[connection signal="text_submitted" from="Edit" to="." method="_on_edit_text_submitted"]
